fix gap in nav links

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a {
         position: fixed;
         bottom: 0;
         display: flex;
-        gap: 2rem;
+        gap: 1rem;
         margin-right: 0;
     }
 
